Fix spacing

--- a/src/components/War/War.scss
+++ b/src/components/War/War.scss
@@ -143,7 +143,7 @@
       flex-direction: column;
       align-items: flex-end;
       width: 35%;
-      gap: 30px;
+      gap: 25px;
 
       h1 {
         margin: 0;
